--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="heading">
+    <h1 >Client/Task Manager</h1>
+  </div>
+  <app-root style="text-align: center"></app-root>
 </body>
 </html>
